Featuer/gpt4 (#63)
* support GPT-4

* update webui dist

* support generate api key
